# pydataflow-template

./: .dockerignore  .gcloudignore  .gitignore  .test_connections.json  Dockerfile.flextemplate  Dockerfile.worker  Makefile  README.md  README_ja.md  pyproject.toml
.github/workflows/: check.yaml
cloudbuild/: cloudbuild_dataflow.yaml  cloudbuild_scheduler.yaml  cloudbuild_storage.yaml  cloudbuild_workflow.yaml
docs/: README.md  README_ja.md
docs/config/: README.md  README_ja.md
docs/config/module/: README.md
docs/config/module/sink/: bigquery.md  bigquery_ja.md
docs/config/module/source/: bigquery.md  bigquery_ja.md  mysql.md  mysql_ja.md  postgres.md  postgres_ja.md
docs/config/module/transform/: beamsql.md  beamsql_ja.md
examples/: README.md  beamsql.json  bigquery_to_bigquery.json  mysql_to_bigquery.json  postgres_to_bigquery.json  postgres_to_bigquery_incremental_append.json  postgres_to_bigquery_incremental_merge.json  postgres_to_bigquery_multi_pipeline.json
spec/: metadata.json  python_command_spec.json
src/pydataflow_template/: exceptions.py  logger_settings.py  main.py
src/pydataflow_template/configs/: config_base.py  config_factory.py  params_base.py  pipeline_config.py  validator_base.py
src/pydataflow_template/configs/sink/: bigquery_sink_config.py  sink_config_base.py
src/pydataflow_template/configs/source/: bigquery_source_config.py  mysql_source_config.py  postgres_source_config.py  source_config_base.py
src/pydataflow_template/configs/transform/: beamsql_transform_config.py  transform_config_base.py
src/pydataflow_template/ios/: clients.py  converter.py  ios.py  providers.py  schema.py
src/pydataflow_template/modules/: fcollection.py  module.py  module_factory.py
src/pydataflow_template/modules/sink/: bigquery_sink.py
src/pydataflow_template/modules/sink/merger/: bigquery_delete.py
src/pydataflow_template/modules/source/: bigquery_source.py  mysql_source.py  postgres_source.py
src/pydataflow_template/modules/transform/: beamsql_transform.py
terraform/: main.auto.tfvars.template  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/artifact_registry/: main.tf  outputs.tf  variables.tf
terraform/modules/dataflow/: main.tf  variables.tf
terraform/modules/googleapi/: main.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/network/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/: main.tf  outputs.tf  variables.tf
tests/: conftest.py
tests/helper/: utils.py
tests/integration/: conftest.py  docker-compose.yaml  test_bigquery_sink_pipeline_integration.py  test_bigquery_source_pipeline_integration.py  test_mysql_source_pipeline_integration.py  test_postgres_source_pipeline_integration.py
tests/integration/db_scripts/mysql/: create_test_table.sql
tests/integration/db_scripts/postgres/: create_test_table.sql
tests/unit/: test_beamsql_transform_config.py  test_bigquery_sink_config.py  test_bigquery_source_config.py  test_mysql_source_config.py  test_pipeline_config.py  test_postgres_source_config.py
workflow/: invoke-pydataflow-template.yaml
